<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".activities.ActivityAccueil">

    <Button
        android:id="@+id/button_multijoueurs"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_width="174dp"
        android:layout_height="60dp"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="16dp"
        android:text="@string/label_multi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button_solo"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_width="175dp"
        android:layout_height="63dp"
        android:layout_marginTop="16dp"
        android:text="@string/label_solo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_multijoueurs" />

    <Button
        android:id="@+id/button_entrainement"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_width="175dp"
        android:layout_height="72dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/label_entrainement"
        app:iconTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_solo" />

    <Button
        android:id="@+id/button_paramètres"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_width="176dp"
        android:layout_height="67dp"
        android:layout_marginTop="16dp"
        android:text="@string/label_parametres"
        app:iconTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_entrainement" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/text_accueil"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497" />
</androidx.constraintlayout.widget.ConstraintLayout>